@@ -1,0 +1,13 @@
+# definition of extended icat metadata, mapping property to column 'number' to match the extended properties
+# defined in irods in extendedICAT.h in modules
+
+# format table.column=attribute_number
+
+
+# sample data
+test.col1=10000
+test.col2=10001
+test2.col1=10003
+
+
+
