@@ -1,8 +1,0 @@
-<HTML>
-<BODY BGCOLOR="white">
-
-<font color="#ee0000">This online documentation represents the JARGON design plans for the future. Not all methods documented here are available in the current release of JARGON. Please see the documentation available with the JARGON release for a list of current functions of the API.</font>
-
-
-</BODY>
-</HTML>
