@@ -52,6 +52,10 @@ Culled all TODO's and dead code, did mass format of source to bring it up to cur
 ----------
 Tests and resolution of Bug 32 -  copyTo when dest file is from URI results in -78000 resource not found
 
+---------
+Enhancement for  Bug 38 -  New 2.2 metadata values for queries
+Work-in-progress on adding ICAT extensible metadata for queries
+
 ================================================================================================
 Outstanding Issues
 
